--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -43,6 +43,13 @@
             </div>
         </form>
 
+        <div class="mt-3 text-center">
+            <p class="text-muted">
+                Don't have an account? 
+                <a asp-action="Register" class="text-primary">Register here</a>
+            </p>
+        </div>
+
         <div class="mt-3">
             <p class="text-muted small">Default credentials:</p>
             <ul class="small">
